# NaturalInteractionVision-RAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  template.py
notebook/: 01_visionllm_interaction.ipynb
visionllm_interaction/components/: data_ingestion.py
visionllm_interaction/constants/training_pipeline/: __init__.py
visionllm_interaction/entity/: artifact_entity.py  config_entity.py
visionllm_interaction/exception/: custom_exception.py
